--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.7.7",
+    "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
     "html-loader": "^5.1.0",
-    "html-webpack-plugin": "^5.6.2",
-    "sass": "^1.80.3",
+    "html-webpack-plugin": "^5.6.3",
+    "postcss-loader": "^8.1.1",
+    "sass": "^1.80.4",
     "sass-loader": "^16.0.2",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
